--- a/resources/scss/modules/mixin.scss
+++ b/resources/scss/modules/mixin.scss
@@ -13,3 +13,38 @@
     }
 
 }
+
+@mixin input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 1rem;
+    border-bottom: 1px solid #a1a1a1;
+    outline: none;
+
+    &:focus {
+        border-color: #000000;
+    }
+
+    &_error {
+        border-color: #b80000;
+    }
+
+    &[readonly] {
+        background-color: #f2f2f2;
+    }
+}
+
+@mixin checkbox {
+    margin: 10px 0;
+    border: 1px solid #a1a1a1;
+    zoom: 1.3;
+
+    &:focus {
+        border-color: #009688;
+    }
+
+    &_error {
+        border-color: #b80000;
+    }
+}
