--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,4 +6,4 @@
 @import "modules/main.scss";
 @import "modules/footer.scss";
 @import "modules/form.scss";
-@import "modules/panel.scss";
+@import "modules/table.scss";
