--- a/resources/scss/modules/header.scss
+++ b/resources/scss/modules/header.scss
@@ -14,7 +14,6 @@
 
     &__menu {
         grid-column: 2 / 3;
-        padding-right: 10px;
     }
 
     &__items {
@@ -27,7 +26,7 @@
     }
 
     &__item {
-        list-style: none
+        list-style: none;
     }
 
     &__link {
