--- a/resources/scss/modules/footer.scss
+++ b/resources/scss/modules/footer.scss
@@ -1,15 +1,40 @@
 .footer {
-    grid-area: footer;
-
-    color: #272727;
-    padding: 15px;
-
     display: grid;
+    grid-template-columns: 1fr minmax(1fr, 1280px) 1fr;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr;
-    place-items: center;
+
+    &__items {
+        grid-column: 2/3;
+        display: grid;
+        grid-template-rows: 50px 50px;
+        grid-template-columns: repeat(4, minmax(auto, 300px));
+        text-align: center;
+        align-items: center;
+    }
 
     &__copy {
-        grid-column: 1 / 2;
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
+
+    &__icq {
+        grid-column: 2/3;
+        grid-row: 1/3;
+    }
+
+    // .footer__inn
+
+    &__inn {
+        grid-column: 3/4;
+        grid-row: 1/3;
+    }
+
+    // .footer__logo
+
+    &__logo {
+        grid-column: 4/5;
+        grid-row: 1/3;
     }
 }
+
+.d-inline-block {}
