--- a/resources/scss/modules/form.scss
+++ b/resources/scss/modules/form.scss
@@ -1,6 +1,6 @@
 .form {
     background-color: #ffffff;
-    border: 1px solid #a1a1a1;
+    border: 1px solid #000000;
 
     padding: 20px;
     width: 100%;
@@ -32,4 +32,6 @@
     &__select {
         @include input;
     }
+
+    &__success {}
 }
