--- a/resources/scss/modules/header.scss
+++ b/resources/scss/modules/header.scss
@@ -4,16 +4,17 @@
 
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: 1fr 100px 1100px 1fr;
     align-items: center;
 
     &__logo {
-        grid-column: 1 / 2;
+        grid-column: 2 /3;
         padding-left: 10px;
     }
 
     &__menu {
-        grid-column: 2 / 3;
+        grid-column: 3 / 4;
+        padding-right: 10px;
     }
 
     &__items {
